src/battle/app/sawhat/public/css/sawhat_v2.css
@CHARSET "UTF-8";

/* ---- OOCSS - Grid.css --- */
.line,.lastUnit{overflow:hidden; *overflow:visible;*zoom:1;}
.unit{float:left;}
.unitRight{float:right;}
.size1of1{width:100%;float:none; clear: both;}
.size1of2{width:50%;}
.size1of3{width:33.33333%;}
.size2of3{width:66.66666%;}
.size1of4{width:25%;}
.size3of4{width:75%;}
.size1of5{width:20%;}
.size2of5{width:40%;}
.size3of5{width:60%;}
.size4of5{width:80%;}
.size1of1,
.size1of2,
.size1of3,
.size2of3,
.size1of4,
.size3of4,
.size1of5,
.size2of5,
.size3of5,
.size4of5 {
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}
.lastUnit{float:none;width:auto;}

/* ---------------------------- */
/* --------- SAWHAT ----------- */
/* ---------------------------- */

/* ---- Base Rules / Element Selector ---- */
body{
	font: 100%/1.5 Arial, Verdana, sans-serif;
	text-align: left;
	background-color: #666;
	color: #555;
	word-wrap:break-word;
}
section, article, header, footer, nav, aside, hgroup{ display: block; }
h1, .h1{font-size:2em;font-weight:bold;line-height: 1.2em; font-style: normal;}
h2, .h2{font-size:1.67em;font-weight:bold; font-style: normal;}
h3, .h3{font-size:1.3em; font-weight:bold; font-style: normal;}
h4, .h4{font-size:1.25em; font-weight:normal; font-style: normal;}
h5, .h5{font-size:1.15em; font-weight:bold; font-style: normal;}
h6, .h6{font-size:1em; font-weight:normal;  font-style: italic;}
h1 { color: #999; }
h2,h3,h4 {
	border-width: 0 0 3px;
	border-style: solid;
	border-color: rgba(0,0,0,0.3);
	margin-bottom: 6px;
}
h3,h4 {
	border-width: 0 0 1px;
}
h4 {
	border-style: dashed;
}
a{ text-decoration: none; color: #999; }
a:hover{ color: #999; color: rgba(0,0,0,0.3); }
article{ padding: 0; }

/* Forms */
fieldset{ width: 100%; }
img{
    max-width: 100%;
}

*:not(pre) > code {
	background: #eee;
	border: 1px solid #ccc;
	vertical-align: middle;
	padding: 0.2em;
}

/* "One Liners" */
.hidden{ display: none; }
.hidden_background{ background-color: transparent !important; }
.transparent{ background: rgb(0, 0, 0);	background: rgba(0, 0, 0, 0.4); }
.left{float: left;}
.right{float: right;}
.align_right{text-align: right;}
.align_middle{vertical-align: middle;}
.vertical_align_ghost { display: inline-block;height: 100%;width: 0;vertical-align: middle; }
.darker{ background: rgba(0, 0, 0, 0.1); }
.darker_text{ color: rgba(0, 0, 0, 0.3); }
.lighter_text{ color: rgba(255,255,255, 0.6); }
.white { background-color: #fff; }
.white_text { color: #fff; }
.black_text { color: #000; }
.padding{ padding: 12px; }
.smallpadding{ padding: 6px; }
.smallestpadding{ padding: 2px; }
.paddingleftright{ padding: 0px 12px; }
.margin{ margin: 12px; }
.smallmargin{ margin: 6px; }
.smallermargin{ margin: 3px; }
.margintop{ margin-top: 12px; }
.marginbottom{ margin-bottom: 12px; }
.marginleft{ margin-left: 12px; }
.marginright{ margin-right: 12px; }
.margintopbottom{ margin-top: 12px; margin-bottom: 12px; }
.marginleftright{ margin-left: 12px; margin-right: 12px; }
.error{ color : red; font-weight: bold; }
.border{ border: 1px solid rgba(0, 0, 0, 0.05); }
.noborder{ border: 0;}
.largeborderbottom{ border-bottom: 6px solid #999; }
.fullwidth { width: 100%;}
.clear {clear: both;}
.clearer {clear: both;height: 0;margin: 0;padding: 0;display: block;}
.clear_left, .clearer_left {clear: left;}
.clear_right, .clearer_right {clear: right;}
.big { font-size: 1.1em; }
.bigger { font-size: 1.2em; }
.striked {text-decoration:line-through;}
.light { font-weight: normal; }
.block { display: block; }

/* ---- Layout ---- */
.content{
	margin: auto;
	padding: 12px;
	background-color: #ccc;
}

.width_constraint{
	max-width: 960px;
	background-color: transparent;
}

header{
	border-bottom: 2px solid #fff;
	vertical-align: bottom;
}
footer.content{
	background-color: #666;
	color: #999;
	min-height: 150px;
}
.content > section > .sawhat,
.content > section > div > .sawhat {
	background: #fff;
}
.banner{
	min-height: 40px;
	height: auto;
	line-height: normal;
	background-color: #999;
	color: #fff;
	padding: 6px 12px;
	display: block;
	vertical-align: middle;
}

.banner h1,
.banner h2,
.banner h3,
.banner h4,
.banner h5,
.banner h6{
	vertical-align: middle;
	display: inline-block;
	line-height: 40px;
	margin: 0;
	border: 0;
}

/* ---- Card Content ---- */
.things{
	padding: 12px;	
}
.things ul li{
	list-style: circle inside;
}
.things ol li{
	list-style: decimal-leading-zero inside;
}

.column_container .size1of2,
.column_container .size1of3 {
	padding: 0;
	margin: 3px 0;
}
.column_container .size1of2:nth-child(1) {
	padding-right: 3px;
}
.column_container .size1of2:nth-child(2) {
	padding-left: 3px;
}

.column_container .size1of3:nth-child(1) {
	padding-right: 4px;
}
.column_container .size1of3:nth-child(2) {
	padding: 0 2px;
}
.column_container .size1of3:nth-child(3) {
	padding-left: 4px;
}

.size1of3 .column_container .size1of2:nth-child(1),
.size1of3 .column_container .size1of2:nth-child(2) {
	width: 100%;
	padding: 0;
}

.size1of3 .column_container .size1of3:nth-child(1) {
	width: 50%;
	padding-right: 3px;
}
.size1of3 .column_container .size1of3:nth-child(2) {
	width: 50%;
	padding-left: 3px;
}
.size1of3 .column_container .size1of3:nth-child(3) {
	width: 100%;
	padding: 0;
}

.column_2, .column_3 {
	-webkit-column-gap:24px;
	-moz-column-gap:24px;
	column-gap:24px;
	-webkit-column-rule:1px solid rgba(0,0,0,0.1);
	-moz-column-rule:1px solid rgba(0,0,0,0.1);
	column-rule:1px solid rgba(0,0,0,0.1);
	margin: 0 0 12px;
}
.column_2 {
	-webkit-column-count:2;
	-moz-column-count:2;
	column-count:2;
}
.column_3 {
	-webkit-column-count:3;
	-moz-column-count:3;
	column-count:3;
}
.size1of2 .column_3 {
	-webkit-column-count:2;
	-moz-column-count:2;
	column-count:2;
}
.size1of3 .column_2 {
	-webkit-column-count:1;
	-moz-column-count:1;
	column-count:1;
}
.size1of3 .column_3 {
	-webkit-column-count:2;
	-moz-column-count:2;
	column-count:2;
}

.include .things {margin: 0; border-width: 0;}
.code { 
	font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New;
	display: block;
	padding: 3px 12px;
	background-color: rgba(0,0,0,0.1);
	overflow: auto;
	/*white-space: normal;*/
	/*word-break: keep-all;*/
}

/* ---- Card Edit ---- */
#card_edit_form legend {
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	padding: 6px;
	margin: 0;
}
.color_picker {
	position: absolute;
	left: 0;
	top: 0;
	width: auto;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	padding: 3px;
	border: 1px solid #ccc;
	background: #fff;
	z-index: 10;
}
.color_picker_item {
	width: 24px;
	height: 24px;
	float: left;
	margin: 3px;
	border: 3px double #ccc;
	background-color: #fff;
	cursor: pointer;
}

/* Upload */
#addfileform{
	line-height: 40px;
}
.uploadprogress{
	position: relative;
	width: 100%;
	height: 40px;
	line-height: 40px;
	text-align: center;
	background-color: #FFF;
	border: 1px solid #FAFAFA;
}
.uploadprogress .bar{
	width: 0%;
	height: 40px;
	background-color: #44CC00;
}
.uploadprogress p{
	position: absolute;
	top: 0;
	left: 12px;
}
/* File list */
.image_link {
	width: 26em;
}
.image_size {
	width: 6em;
	text-align: right;
}
.image_preview {
	position: fixed;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
	vertical-align: middle;
	text-align: center;
	z-index: 20;
	background: rgba(80,80,80,0.4);
}
.image_preview img {
	display: inline-block;
	vertical-align: middle;
	max-height: 100%;
	max-width: 100%;
	box-shadow: 0 0 20px rgba(0,0,25,0.4);
	cursor: pointer;
}

/* ACE EDITOR */
#editor_container { 
	position: relative;
	height: 460px;
}
#editor {
	border: 1px solid rgba(0, 0, 0, 0.05);
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

/* Footer */
footer a,
footer .btn-link {
	display: inline;
	padding: 0;
	color: #ccc;
	font-weight: bold;
	text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
	font-size: 1em;
}
footer a:hover,
footer .btn-link:hover {
	color: #eee;
	text-decoration: none;
}
footer form,
footer input {
	margin: 0 !important;
}


/* ---- Bootstrap fixes ?? ---- */

form{ margin: 0;}

.btn-link {
	display: inline;
	padding: 0;
	color: #ccc;
	font-size: 1em;
}

/* ---- Media Queries ---- */

@media screen and (max-width: 1200px) {
	.size1of3 { width: 50%; }
	.size1of2 { width: 100%; }
	
	.column_container .size1of2:nth-child(1),
	.column_container .size1of2:nth-child(2) {
		padding: 0;
	}
	
	.column_container .size1of3:nth-child(1) {
		padding-right: 3px;
	}
	.column_container .size1of3:nth-child(2) {
		padding-left: 3px;
	}
	.column_container .size1of3:nth-child(3) {
		padding: 0;
		width: 100%;
	}
	
	.column_2 {
		-webkit-column-count:1;
		-moz-column-count:1;
		column-count:1;
	}
	.column_3 {
		-webkit-column-count:2;
		-moz-column-count:2;
		column-count:2;
	}
}
@media screen and (max-width: 800px) {
	.unit{ float: none;}
	.size1of3,.size1of2,.size1of1,.size4of5,.size1of5{ width: 100%;	}
	.content {
		padding: 0;
	}
	.include {
		margin: 0 -6px;
	}
	
	.column_container .size1of2:nth-child(1),
	.column_container .size1of2:nth-child(2),
	.column_container .size1of3:nth-child(1),
	.column_container .size1of3:nth-child(2),
	.column_container .size1of3:nth-child(3),
	.size1of3 .column_container .size1of3:nth-child(1),
	.size1of3 .column_container .size1of3:nth-child(2),
	.size1of3 .column_container .size1of3:nth-child(3) {
		width: 100%;
		padding: 0;
	}
	
	.column_2,
	.column_3 {
		-webkit-column-count:1;
		-moz-column-count:1;
		column-count:1;
	}
}

